# research

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  :x  BACKEND_BENCH_ANALYSIS_README.md  BACKEND_BENCH_PROFILING_ANALYSIS.md  BACKEND_BENCH_PROFILING_INDEX.md  BACKEND_BENCH_PROFILING_QUICK_REFERENCE.md  GPU_ANALYSIS_INDEX.md  GPU_EXECUTION_ANALYSIS.md  GPU_EXECUTION_QUICK_REFERENCE.md  GPU_EXECUTION_SUMMARY.txt  INFRA_BUGS.md  MIDAS_KERBAL_REFACTOR.md  PROFILING_SEARCH_SUMMARY.txt  README.md  ROLLOUTS_ARCHITECTURE.md  ROLLOUTS_IMPLEMENTATION_TEMPLATES.md  ROLLOUTS_VISUAL_SUMMARY.txt  ROLLOUT_RL_ARCHITECTURE_DIAGRAM.txt  ROLLOUT_RL_INFRASTRUCTURE_SUMMARY.md  ROLLOUT_RL_QUICK_REFERENCE.md  SLIME_COMPREHENSIVE_OVERVIEW.md  SLIME_TECHNICAL_REFERENCE.md  SLIME_VS_ROLLOUTS_GAP_ANALYSIS.md  agent_presets_summary.md  backend_bench_execution_flow.md  backend_bench_quick_reference.md  backend_bench_visual_flow.md  cleanup.md  clicker.txt  config-change-handoff-design.md  config_example.yaml  corpus_proximity_cli.py  deepseek-mlsys.md  deployment_headache.txt  files-to-remove.txt  files-to-remove2.txt  handoff.md  (+10 more)
bifrost/: ASYNC_CLIENT_CODE_REVIEW.md  README.md  README_SSH_INVESTIGATION.txt  SSH_KEY_CODE_SNIPPETS.md  SSH_KEY_ISSUE_ANALYSIS.md  pyproject.toml
bifrost/bifrost/: __init__.py  async_client.py  cli.py  client.py  deploy.py  git_sync.py  job.py  job_manager.py  provision.py  remote_fs.py  server.py  types.py  validation.py
bifrost/docs/: SSH_KEY_FIX_RECOMMENDATIONS.md  SSH_KEY_INVESTIGATION_INDEX.md  SSH_KEY_ISSUE_QUICK_REF.txt
bifrost/tests/: smoke_exec_stream.py  test_async_client.py  test_gpu_streaming.py  test_live_async.py
broker/: README.md  pyproject.toml  test_browser_auth.py  test_hapi_logs.py
broker/broker/: __init__.py  api.py  cli.py  client.py  query.py  runpod_logs.py  ssh_clients_compat.py  types.py  validation.py
csearch/: .csearch.db  .csearch.tags  README.md  TODO.md  pyproject.toml
csearch/csearch/: __init__.py  cli.py  index.py  search.py  types.py
csearch/tests/: __init__.py  test_search.py
deploy/: HANDOFF.md  README.md  SUMMARY.md  __init__.py  api.py  pyproject.toml
deploy/examples/: simple_deployment.py
dev/integration_training/: HYPERPARAMETERS_INDEX.md  README.md  SLIME_HYPERPARAMETERS.json  SLIME_HYPERPARAMETERS.md  SLIME_HYPERPARAMETERS_QUICK_REFERENCE.md  base_config.py  deploy.py  pyproject.toml  run_fsdp.sh  socket.txt  train.py
examples/kernels/: cute_refs.md  pyproject.toml
miniray/: README.md  SFT_FIRST_APPROACH.md  SIMPLE_RL_ARCHITECTURE.md  TOY_EXAMPLE.md  __init__.py  cluster.py  gpu_affinity.py  nccl.py  pyproject.toml  remote_worker.py  setup.py  worker.py  worker_server.py
miniray/docs/: ARCHITECTURE_1_PLAN.md  COMPARISON_WITH_RAY.md  IMPL_NOTES.md  RL_LOOP_GAP_ANALYSIS.md  jobs.md
pretrain/: pyproject.toml  todo.md
pretrain/configs/: dsv3_tiny.toml
pretrain/pretrain/: __init__.py
pyvimdiff/: README.md  pyproject.toml
pyvimdiff/pyvimdiff/: __init__.py  app.py  cli.py  git.py  terminal.py  theme.py  utils.py
rollouts/: .gitignore  ABORT_AND_TOOL_RESULTS_GUIDE.md  AGENT_RUNNER_TRACING_EXPLAINED.md  COMPARISON_AGENT_RUNNER.md  FRONTEND_ARCHITECTURE.md  HANDOFF.md  HANDOFF_STREAMING.md  MERGE_EMIT_EVENT_INTO_ON_CHUNK.md  MESSAGE_BUILDER_INTEGRATION.md  MESSAGE_DESIGN_ANALYSIS.md  MODEL_PRESETS.md  ON_CHUNK_VS_EMIT_EVENT_ANALYSIS.md  PERSISTENCE_MECHANISMS_EXPLAINED.md  PI_AI_INTEGRATION_PLAN.md  README.md  README_MINIRAY.md  abstractions.md  check_auth.py  chess_notes.md  claude_todo_20251212.md  haiku.txt  math_ops.py  poem.txt  pyproject.toml  run_eval.py  simple_calculator.py  test_agent_framework.py  test_oauth_verification.py  test_presets.py  test_refactor.py  test_refactor_simple.py  todo.md  tokens.md  toolslash_spec.md
rollouts/docs/: ABORT_FIX.md  CLASS_AUDIT_REFACTOR.md  CLAUDE_CODE_CONTEXT_MANAGEMENT.md  CLAUDE_THOUGHTS_MINIRAY.md  CLAUDE_THOUGHTS_ROLLOUTS.md  D5_WEIGHT_SYNC_CLARIFICATION.md  D6_TRAINING_BACKEND.md  EXPERIMENT_TRACKER.md  FRONTEND_ABSTRACTION.md  FUNCTIONAL_VS_OOP_DESIGN.md  GAP_ANALYSIS_POST_TRAINING.md  IMAGE_SUPPORT.md  MINIRAY.md  MULTI_GPU_DESIGN.md  OAUTH.md  PI_MONO_FEATURES.md  PRIME_INTEGRATION.md  REPL_AX_IMPROVEMENTS.md  ROLLOUTMANAGER_DEPRECATION.md  SESSION_DESIGN.md  SHORT_TERM_PLAN.md  SLIME_INTEGRATION.md  THINKING_BLOCK_BUG.md  TREE_SEARCH_DESIGN.md  VERIFY_OAUTH.md
rollouts/examples/: chess_beam_search.py  evaluation_example.py  metrics_example.py  preset_usage.sh  run_rl.py  run_sft.py  sft_pipeline_example.py  test_async_rollout_manager.py  test_data_buffer.py  test_dataset_loaders.py  test_pytorch_backend.py  test_rollout_generation.py  test_rollout_manager.py  test_sft.py  test_weight_sync.py  train_distributed_miniray.md  training_with_metrics.py
rollouts/rollouts/: __init__.py  __main__.py  _rate_limit.py  _retry.py  agents.py  checkpoints.py  cli.py  deploy.py  dtypes.py  evaluate.py  evaluation.py  export.py  feedback.py  fingerprint.py  import_cc.py  logging_utils.py  models.py  pipeline.py  progress.py  prompt.py  providers.py  pyproject.toml  remote.py  rollout.py  run_eval.py  search.py  slice.py  store.py  transform_messages.py
rollouts/scripts/: check_wafer_sync.sh  stress_test_rate_limits.py
rollouts/tests/: test_abort.py  test_agent_framework.py  test_chess_puzzle.py  test_git_worktree_env.py  test_inference_correctness.py  test_multi_provider_tool_handoff.py  test_multi_turn.py  test_provider_switching.py  test_real_agent.py  test_refactor_simple.py  test_repl_agent.py  test_repl_llm_query.py  test_search.py  test_session_persistence.py  test_slice.py  test_streaming_refactor.py  test_switch_session.py  test_thinking_block_resume.py  test_tito_correctness.py
rollouts/training/: __init__.py  async_rollout_manager.py  dataset_loaders.py  rl_loop.py  rl_losses.py  rollout_generation.py  rollout_manager.py  sft.py  sft_loop.py  types.py  weight_sync.py
shared/: LOGGING.md  __init__.py  config.py  json_formatter.py  logging_config.py  pyproject.toml  retry.py  ssh_foundation.py  test_ssh_foundation.py  validation.py
(+817 files in other folders)
