[tool.uv.workspace]
members = ["bifrost", "broker", "shared", "rollouts", "miniray", "dev/kernel-learning"]

[project]
name = "gpu-research-tools"
version = "0.1.0"
description = "Research workspace for GPU provisioning and remote execution tools"
requires-python = ">=3.10"

# Core workspace members
dependencies = [
    "broker",
    "bifrost",
    "shared",
    "rollouts",
]

[project.optional-dependencies]
# Development experiments (unpublished)
dev-jax-basic = [
    "jax[cuda12] ; sys_platform == 'linux'",
    "jax ; sys_platform == 'darwin'",
]

# Corpus proximity experiment
dev-corpus-proximity = [
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "dacite>=1.8.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "syntok>=1.4.4",
]

# Optimizer visualizations
dev-optimizer-visuals = [
    "jax[cuda12] ; sys_platform == 'linux'",
    "jax ; sys_platform == 'darwin'",
    "matplotlib>=3.0.0",
    "streamlit>=1.28.0",
    "plotext>=5.0.0",
]

# Outlier features analysis for MoE models
# Includes bleeding-edge transformers for GPT-OSS & GLM-4 MoE support
dev-outlier-features = [
    "broker",
    "bifrost",
    "shared",
    "nnsight>=0.4",
    "transformers @ git+https://github.com/huggingface/transformers.git@522b79a346c4a188fd16548a7e0bc0ad15b86e5a",  # GPT-OSS & GLM-4 MoE support (pinned commit)
    "huggingface-hub==1.0.0rc2",  # Required by bleeding-edge transformers (pre-release, pinned exact)
    "torch>=2.4.0",
    "accelerate>=0.20.0",
    "datasets>=4.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "triton>=3.4.0; sys_platform == 'linux'",  # MXFP4 quantization support for GPT-OSS
    "kernels; sys_platform == 'linux'",  # Optimized MXFP4 kernels from PyPI for GPT-OSS
]

# Integration training - SFT + RL using rollouts module
dev-integration-training = [
    "rollouts",
    "shared",
    "torch>=2.4.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "trio>=0.27.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.0.0",
]

# LeetGPU CLI for GPU kernel learning challenges
dev-kernel-learning = [
    "kernel-learning",
]

# Nano-inference JAX GPT-2 implementation
dev-nano-inference-jax = [
    "jax[cuda12] ; sys_platform == 'linux'",
    "jax ; sys_platform == 'darwin'",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "einops>=0.6.0",
    "torch>=2.0.0",  # Required for comparison utilities
]

# GPT-2 speedrun training
dev-speedrun = [
    "torch>=2.4.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "kernels; sys_platform == 'linux'",
]

[project.scripts]
corpus-proximity = "corpus_proximity_cli:main"

[tool.uv.sources]
broker = { workspace = true }
bifrost = { workspace = true }
shared = { workspace = true }
rollouts = { workspace = true }
miniray = { workspace = true }
kernel-learning = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ty>=0.0.1a22",
    "ruff>=0.8.5",
]
dev-outlier-features = [
    "matplotlib>=3.10.7",
    "plotext>=5.3.2",
    "rich>=14.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.setuptools]
py-modules = ["corpus_proximity_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
preview = true  # Required for PLR1702 (too-many-nested-blocks)

# Exclude dev/ from linting - experimental scripts with sys.path hacks, not proper packages.
# TODO: Revisit when dev/ structure stabilizes (may become examples/ or get removed)
exclude = [
    "dev/**",
    "scripts/**",  # One-off scripts with hardcoded paths
    "cutlass/**",  # External vendored code
    "cutlass_repo/**",  # External vendored code
    "worktrees/**",  # Git worktrees (copies of repo)
    "**/functional_extractor/**",  # Debugging/testing tools for model extraction
    "**/refactor-snipe/**",  # Refactoring tool (dev tooling)
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort (import sorting)
    "ANN",     # flake8-annotations (enforce type annotations)
    "ASYNC",   # flake8-async (trio/asyncio best practices)
    "B",       # flake8-bugbear (common bugs)
    "UP",      # pyupgrade (modern Python patterns)
    "PLR0913", # too-many-arguments (Tiger Style: "hourglass shape: few parameters")
    "PLR0915", # too-many-statements (Tiger Style: 70 line limit)
    "PLR1702", # too-many-nested-blocks (Tiger Style: "centralize control flow")
    "PLW2901", # redefined-loop-variable (Carmack SSA: single assignment)
    "RET506",  # superfluous-else-raise (explicit control flow)
    "RET507",  # superfluous-else-continue (explicit control flow)
    "A",       # flake8-builtins (shadowing builtins like list, str)
    "RUF018",  # assignment-in-assert (catches typos)
    "TRY002",  # raise-vanilla-exception (use specific exceptions)
    "TRY003",  # raise-vanilla-args (proper exception messages)
    "TRY004",  # type-check-without-type-error (use TypeError for type checks)
    "TRY201",  # verbose-raise (use bare raise)
    "TRY300",  # try-consider-else (clear control flow)
    "TRY400",  # error-instead-of-exception (use logging.exception)
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "F822",    # Undefined name in __all__ (false positive for lazy imports via __getattr__)
    # Typer is designed to use typer.Option() in argument defaults - this is the documented API
    "B008",    # function-call-in-default-argument (false positive for typer)
    # Deferred - requires creating exception class hierarchy (TODO: implement later)
    "TRY003",  # raise-vanilla-args (exception messages at raise site)
    "TRY002",  # raise-vanilla-class (same category)
    "TRY004",  # prefer-type-error (stylistic)
    "TRY300",  # try-consider-else (stylistic, often less readable)
    # Deferred - complexity rules require refactoring, not quick fixes
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR1702", # too-many-nested-blocks
    # Async rules - some need --preview flag, ignore all ASYNC for now
    "ASYNC",   # blocking calls in async (trio.to_thread.run_sync handles these)
    # Stylistic/low-priority - defer for later cleanup
    "PLW2901", # redefined-loop-name (often intentional in comprehensions)
    "E402",    # module-import-not-at-top (often for lazy imports)
    "A002",    # builtin-argument-shadowing (format arg is common)
    "A005",    # module-shadowing-builtin (types.py is common pattern)
    "B007",    # unused-loop-control-variable (use _ prefix if needed)
    "B012",    # return-in-finally (rare, usually intentional)
    "B027",    # empty-method-without-abstract (protocol stubs)
    "B023",    # function-uses-loop-variable (often intentional closure)
    "E741",    # ambiguous-variable-name (l, O, I - sometimes needed)
    "UP038",   # use X | Y in isinstance - breaks Python 3.9 compat
    "F841",    # unused variable - often intentional (stdin, _ pattern)
]

[tool.ruff.lint.pylint]
max-args = 7             # Max function arguments (Tiger Style: few parameters)
max-statements = 70      # Max statements per function (Tiger Style: 70 line limit)
max-branches = 12        # Max if/elif branches
max-nested-blocks = 5    # Max nesting depth (Linus rule: "if you need more than 3 levels, you're screwed")

[tool.ty.src]
exclude = [
    "**/originals/**",  # Exclude all third-party code in originals/ directories
    "references/**",  # Exclude all reference repositories
    "dev/**",  # Exclude all dev experiments
    "rollouts/tests/**",  # Test files (separate type checking pass)
    "*_test.py",  # Any test files
    "test_*.py",  # Any test files
]

[tool.ty.rules]
# Keep unresolved-import as error by default (for internal packages)
# We'll override to warning for specific directories with external deps
unresolved-import = "error"

# Override: Downgrade to warnings for dev directories that use external deps
[[tool.ty.overrides]]
include = [
    "dev/**",  # Dev experiments use various external deps
    "scripts/**",  # Scripts may use optional deps
]

[tool.ty.overrides.rules]
unresolved-import = "warn"
