[project]
name = "csearch"
version = "0.1.0"
description = "Code search CLI - symbol definitions, references, and semantic search"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
csearch = "csearch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
