[project]
name = "deploy"
version = "0.1.0"
description = "High-level deployment orchestration (composition of midas + kerbal)"
requires-python = ">=3.10"

dependencies = [
    "bifrost",
    "midas",
    "kerbal",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
