[project]
name = "miniray"
version = "0.1.0"
description = "Simple distributed computing (Heinrich + TCP)"
requires-python = ">=3.10"

# No dependencies - just Python stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
nccl = [
    "torch>=2.0.0",
]

[project.scripts]
miniray-server = "miniray.worker_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
