[project]
name = "rollouts"
version = "0.2.0"
description = "Lightweight framework for LLM evaluation and agentic RL with tool support"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "dacite>=1.8.0",
    "aiohttp>=3.9.0",
    "trio>=0.32.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# Deployment (GPU provisioning + server management)
deploy = [
    "bifrost @ git+https://github.com/arb8020/research.git#subdirectory=bifrost",
    "broker @ git+https://github.com/arb8020/research.git#subdirectory=broker",
]

# Training (distributed training with FSDP/DDP)
training = [
    "miniray",
    "torch>=2.0.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-trio>=0.8.0",
]
