[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for research"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
package-dir = {"shared" = "."}
