[project]
name = "integration-training"
version = "0.1.0"
description = "SFT+RL training using rollouts module"
requires-python = ">=3.10"
dependencies = [
    "rollouts @ git+https://github.com/arb8020/research.git#subdirectory=rollouts",
    "shared @ git+https://github.com/arb8020/research.git#subdirectory=shared",
]

[project.optional-dependencies]
# Remote deployment - training dependencies for remote GPU
remote = [
    "torch>=2.4.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "trio>=0.27.0",
    "accelerate>=0.20.0",
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
