[project]
name = "kernels"
version = "0.1.0"
description = "GPU kernel examples and LeetGPU CLI for GPU programming challenges"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "nvidia-cutlass; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.40.0",
]

[project.scripts]
leetgpu = "leetgpu_cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["leetgpu_cli"]
