[project]
name = "rollouts"
version = "0.2.0"
description = "Lightweight framework for LLM evaluation and agentic RL with tool support"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "dacite>=1.8.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# Deployment (GPU provisioning + server management)
deploy = [
    "bifrost @ git+https://github.com/arb8020/research.git#subdirectory=bifrost",
    "broker @ git+https://github.com/arb8020/research.git#subdirectory=broker",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
